--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,7 @@
 
 body{
     margin: 0;
+    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
