--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,6 @@
-/* Global Font Configuration */
+/* Global Font Configuration - extends index.css base styles */
 * {
   font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-/* Base styling that extends index.css */
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
